Fixed music player alignment

--- a/webapp/app/css/app.less
+++ b/webapp/app/css/app.less
@@ -102,7 +102,7 @@ body {
   top:50%;
   left:50%;
   margin-left:-300px;
-  margin-top:-59px;
+  margin-top:-29.5px;
   height:auto;
 }
 .play {
